--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
 </html>
