--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="votre maison, votre style" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <meta name="og:title" content="LN renovations" />
+  <meta name="og:title" content="LN renovation" />
   <meta property="og:description" content="LN Renovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation.">
   <meta name="keywords" content="rénovation, rénovation Montréal, rénovation intérieure, rénovation extérieure, rénovation cuisine, rénovation salle de bains, rénovation sous-sol, entreprise de rénovation, rénovation résidentielle, rénovation domiciliaire">
-  <meta name="og:image" content="%PUBLIC_URL%/logo192.png" />
+  <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
   <meta name="og:url" content="https://lnrenovations.ca" />
-  <meta name="og:site_name" content="LN renovations" />
+  <meta name="og:site_name" content="LN renovation" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>LN renovations</title>
 </head>
