--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     })(window, document, 'script', 'dataLayer', 'GTM-NJH232Z');</script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/x-icon"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -21,10 +21,15 @@
   <meta property="og:description" content="LN Renovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation.">
   <meta name="keywords" content="rénovation, rénovation Montréal, rénovation intérieure, rénovation extérieure, rénovation cuisine, rénovation salle de bains, rénovation sous-sol, entreprise de rénovation, rénovation résidentielle, rénovation domiciliaire">
   <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
-  <meta name="og:url" content="https://lnrenovations.ca" />
+  <meta name="og:url" content="https://lnrenovation.ca/" />
   <meta name="og:site_name" content="LN renovation" />
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Matan Dessaur">
+  <link rel="canonical" href="https://lnrenovation.ca/">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <title>LN renovations</title>
+  <meta name="description" content="LN Renovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation.">
 </head>
 
 <body>
