--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <!-- Google Tag Manager -->
@@ -17,19 +17,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <meta name="og:title" content="LN renovation" />
-  <meta property="og:description" content="LN Renovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation.">
-  <meta name="keywords" content="rénovation, rénovation Montréal, rénovation intérieure, rénovation extérieure, rénovation cuisine, rénovation salle de bains, rénovation sous-sol, entreprise de rénovation, rénovation résidentielle, rénovation domiciliaire">
+  <meta name="og:title" content="LN Rénovation - Entreprise de rénovation à Montréal" />
+  <meta property="og:description" content="LN Rénovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation." />
+  <meta name="keywords" content="rénovation, rénovation Montréal, rénovation intérieure, rénovation extérieure, rénovation cuisine, rénovation salle de bains, rénovation sous-sol, entreprise de rénovation, rénovation résidentielle, rénovation domiciliaire, Montréal" />
   <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
-  <meta name="og:url" content="https://lnrenovation.ca/" />
-  <meta name="og:site_name" content="LN renovation" />
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Matan Dessaur">
-  <link rel="canonical" href="https://lnrenovation.ca/">
+  <meta name="og:url" content="https://lnrenovation.ca" />
+  <meta name="og:site_name" content="LN Rénovation - Votre partenaire en rénovation" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>LN renovations</title>
-  <meta name="description" content="LN Renovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation.">
+  <!-- SEO Enhancements -->
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Matan Dessaur" />
+  <meta name="language" content="fr" />
+
+  <meta name="referrer" content="no-referrer-when-downgrade" />
+
+  <title>LN Rénovation - Spécialiste en rénovation intérieure et extérieure</title>
+  <meta name="description" content="LN Rénovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation." />
 </head>
 
 <body>
