--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     })(window, document, 'script', 'dataLayer', 'GTM-NJH232Z');</script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/x-icon"/>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
