--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <meta property="og:title" content="LN Rénovation - Entreprise de rénovation à Montréal" />
   <meta property="og:description" content="LN Rénovation est une entreprise de rénovation basée à Montréal. Nous offrons des services de rénovation de haute qualité pour votre maison, en vous aidant à créer l'espace de vos rêves. Notre équipe d'experts qualifiés est spécialisée dans la rénovation intérieure et extérieure, y compris la cuisine, la salle de bains, le sous-sol et bien plus encore. Contactez-nous dès aujourd'hui pour obtenir une consultation gratuite et commencer votre projet de rénovation." />
   <meta property="keywords" content="rénovation, rénovation Montréal, rénovation intérieure, rénovation extérieure, rénovation cuisine, rénovation salle de bains, rénovation sous-sol, entreprise de rénovation, rénovation résidentielle, rénovation domiciliaire, Montréal" />
-  <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
   <meta property="og:url" content="https://lnrenovation.ca" />
   <meta property="og:site_name" content="LN Rénovation - Votre partenaire en rénovation" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
